# goph420-w2025-Midterm2-stDF

./: Q2driver.py  README.md  pyproject.toml
Examples/: Q2driver.py
src/Midterm2/: Q2regression.py
