[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Midterm2"
version = "0.0.1"
authors = [
    { name="Declan Fitzpatrick", email="declan.fitzpatrick@ucalgary.ca" },
]
description="goph420 Midterm2 toml"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/DeclanFitzpatrick/goph420-w2025-Midterm2-stDF.git"